--- a/public/meditation/meditate.css
+++ b/public/meditation/meditate.css
@@ -1,91 +1,209 @@
-  @import url('https://fonts.googleapis.com/css?family=Raleway:200');
-
-/* ---- reset ---- */
-html, body {
-  margin: 0;
+html, body, h1, h2, h3, h4, h5. h6, p {
   font-family: 'Roboto';
-  font-weight:200;
-  /*background: linear-gradient(#111, #000, #111);*/
+  font-weight: 280;
 }
+
 .meditation-instructions{
-background-color: blue;
 font-family: 'Roboto';
 font-weight:200;
 color: #000;
-font-size: 1.3em;
+font-size: 1.3px;
 }
-canvas {
+
+body {
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #48448C;
+  -webkit-animation: color-breathe 10s ease-in-out alternate infinite;
+          animation: color-breathe 10s ease-in-out alternate infinite;
+}
+body:before {
+  content: "";
   display: block;
-  vertical-align: bottom;
-/*  width: 100%;
-  height: 100%;*/
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #111;
+/*  background: radial-gradient(circle at center, rgba(41, 71, 107, 0) 0, #1E3A63 100%);
+}
+
+.blob {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 100;
+  width: 28vw;
+  height: 28vw;
+  background-color: #111;
+  border-radius: 100% 95% 90% 85% / 85% 90% 95% 100%;
+  -webkit-animation: wobble 24s alternate infinite,  breathe 10s ease-in-out alternate infinite;
+          animation: wobble 24s alternate infinite,  breathe 10s ease-in-out alternate infinite;
+}
+.blob:before, .blob:after {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  opacity: .2;
+  background-color: #111;
+  border-radius: 100% 95% 90% 85% / 85% 90% 95% 100%;
+  -webkit-animation: wobble 24s alternate infinite,  breathe 10s ease-in-out alternate infinite;
+          animation: wobble 24s alternate infinite,  breathe 10s ease-in-out alternate infinite;
+}
+.blob:before {
+  width: 31vw;
+  height: 31vw;
+  top: -3vw;
+  left: -3vw;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+.blob:after {
+  width: 32vw;
+  height: 32vw;
+  right: -5vw;
+  bottom: -4vw;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+.blob h1 {
+  font-size: 10vw;
+  color: #F0F4F7;
+  text-transform: lowercase;
+  padding-bottom: 1.5vw;
+  z-index: 100;
+  -webkit-animation: breathe 10s ease-in-out alternate infinite;
+          animation: breathe 10s ease-in-out alternate infinite;
+}
+
+@-webkit-keyframes wobble {
+  50% {
+    border-radius: 85% 90% 95% 100% / 100% 80% 90% 65%;
+  }
+  100% {
+    border-radius: 100% 95% 90% 85% / 95% 70% 95% 100%;
+  }
+}
+
+@keyframes wobble {
+  50% {
+    border-radius: 85% 90% 95% 100% / 100% 80% 90% 65%;
+  }
+  100% {
+    border-radius: 100% 95% 90% 85% / 95% 70% 95% 100%;
+  }
+}
+@-webkit-keyframes breathe {
+  0% {
+    -webkit-transform: translateY(0) scale(1);
+            transform: translateY(0) scale(1);
+  }
+  38% {
+    -webkit-transform: translateY(-8%) scale(1.05);
+            transform: translateY(-8%) scale(1.05);
+  }
+  50% {
+    -webkit-transform: translateY(-8%) scale(1.055);
+            transform: translateY(-8%) scale(1.055);
+  }
+  65% {
+    -webkit-transform: translateY(-8%) scale(1.05);
+            transform: translateY(-8%) scale(1.05);
+  }
+  95% {
+    -webkit-transform: translateY(0) scale(1);
+            transform: translateY(0) scale(1);
+  }
+  100% {
+    -webkit-transform: translateY(0) scale(1);
+            transform: translateY(0) scale(1);
+  }
+}
+@keyframes breathe {
+  0% {
+    -webkit-transform: translateY(0) scale(1);
+            transform: translateY(0) scale(1);
+  }
+  38% {
+    -webkit-transform: translateY(-8%) scale(1.05);
+            transform: translateY(-8%) scale(1.05);
+  }
+  50% {
+    -webkit-transform: translateY(-8%) scale(1.055);
+            transform: translateY(-8%) scale(1.055);
+  }
+  65% {
+    -webkit-transform: translateY(-8%) scale(1.05);
+            transform: translateY(-8%) scale(1.05);
+  }
+  95% {
+    -webkit-transform: translateY(0) scale(1);
+            transform: translateY(0) scale(1);
+  }
+  100% {
+    -webkit-transform: translateY(0) scale(1);
+            transform: translateY(0) scale(1);
+  }
+}
+@-webkit-keyframes color-breathe {
+  0% {
+    background: #48448C;
+  }
+  33% {
+    background: #5477A6;
+  }
+  66% {
+    background: #5477A6;
+  }
+  100% {
+    background: #48448C;
+  }
+}
+@keyframes color-breathe {
+  0% {
+    background: #48448C;
+  }
+  33% {
+    background: #5477A6;
+  }
+  66% {
+    background: #5477A6;
+  }
+  100% {
+    background: #48448C;
+  }
 }
 
 /*#meditations{
   background-color: transparent !important;
 }*/
 
-/*#logo-canvas, .logo-canvas{
+#logo-canvas {
   z-index: -2;
   display: block;
-  position: absolute;
+  background: transparent;
+  color:#111;
+  /*position: absolute;*/
   width: 100%;
   height: 100%;
-}*/
+}
   /* --------------------- NAVBAR / FOOTER / GLOBALS --------------------- */
 
   
-
- /* --------------------- CONTENT --------------------- */
-/* ---- particles.js container ---- */
-
-/*#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #111;
-  background-image: url("");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-}*/
-
-/* ---- stats.js ---- */
-
-/*.count-particles {
-  background: #000022;
-  position: absolute;
-  top: 48px;
-  left: 0;
-  width: 80px;
-  color: #13E8E9;
-  font-size: .8em;
-  text-align: left;
-  text-indent: 4px;
-  line-height: 14px;
-  padding-bottom: 2px;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
-}
-
-.js-count-particles {
-  font-size: 1.1em;
-}
-
-#stats,
-.count-particles {
-  -webkit-user-select: none;
-  margin-top: 5px;
-  margin-left: 5px;
-}
-
-#stats {
-  border-radius: 3px 3px 0 0;
-  overflow: hidden;
-}
-
-.count-particles {
-  border-radius: 0 0 3px 3px;
-}*/
-
 
