--- a/public/landing.css
+++ b/public/landing.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6, nav {
   font-family: 'Roboto';
   font-weight: 280;
 }
-/*body, .parallax {
+body, .parallax {
   margin: 0;
   background-color: black;
   width: 100%;
@@ -28,7 +28,7 @@ canvas {
   font-family: 'roboto';
   font-size: 6em;
 
-}*/
+}
 .definition, .description {
   text-transform: uppercase;
   font-size: 1.4em;
