--- a/public/memos/memos.css
+++ b/public/memos/memos.css
@@ -2,7 +2,8 @@
   /* --------------------- NAVBAR / FOOTER / GLOBALS --------------------- */
 
   nav, h1, h2, h3, h4, footer {
-    font-family: 'Roboto'
+    font-family: 'Roboto';
+    font-weight:200;
     letter-spacing: .4em;
     text-transform: uppercase;
     text-align: center;
