--- a/public/meditate/meditate.css
+++ b/public/meditate/meditate.css
@@ -76,7 +76,9 @@ html, body {
   animation-timing-function: ease;
   transform-origin: 50% 50%;
 }
-
+.material-tooltip>.backdrop {
+  background: linear-gradient(rgba(8, 0, 17, .8), rgba(0, 0, 0, .8));
+}
 @keyframes pulse {
   0% {
     transform: scale(1);
@@ -96,8 +98,10 @@ html, body {
   color: #fff;
   background-color: #1a1a1a;
   border: none;
-  padding: 10px;
-  width: 5px;
+/*  padding: 10px;
+  width: 5px;*/
+  float:right;
+  display: inline;
   opacity: 0.4;
   transition: opacity 0.5s ease;
 }
