--- a/public/missions/missions.css
+++ b/public/missions/missions.css
@@ -42,18 +42,15 @@
  /* --------------------- CONTENT --------------------- */
 
   .missionRow {
-    /*border: 1px solid red;*/
   }
   .missionCard {
     padding: 5%;
     align-content: center;
     width:25%;
     height: 250px;
-
-    /*border: 1px solid silver;*/
   }
   .material-tooltip>.backdrop {
-    background: linear-gradient(rgba(8, 0, 17, .8), rgba(0, 0, 0, .8));
+    background: linear-gradient(rgba(8, 0, 17, .9), rgba(0, 0, 0, .9));
   }
   .material-tooltip>span {
     font-size: 1em;
@@ -69,23 +66,18 @@
   .tap-target-content>p {
     font-family: Roboto;
     font-weight: 100;
-    font-size: .8em;
+    font-size: 1em;
     letter-spacing: .05em;
   }
   .material-tooltip {
     max-width:350px;
     font-family: 'Roboto';
+    font-size: 1.3em;
   }
-
-/*
-This feature was setting off the NavBar
-
-li {
-  display: block;
-  width: 80px;
-  padding-left:12px;
-  padding-right:12px;
-}*/
+  .material-tooltip .text-muted {
+    font-size: 1.5em;
+    padding-top: 1em;
+  }
 
 .missionIcon {
   position: relative;
